--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/mainpage.css">
+    
+    <title>Landing Page Project</title>
 </head>
 <body>
-    
+    <div class="box1">
+        <div class="box1header"> 
+            <img src="img/logo.png" alt="logo">
+        </div>
+
+        <div class="box1content">
+
+        </div>
+    </div>
+
+    <div class="box2">
+
+    </div>
+
+    <div class="box3">
+
+    </div>
+
+    <div class="box4">
+        <div>
+            Call to action! It's time!
+            Sign up for our product by clicking that button right over there!
+        </div>
+    </div>
+
+    <div class="box5">
+        Copyright © The Odin Project 2022
+    </div>
+
+
+
 </body>
 </html>
