Improving box 1 header

--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
             <div class="box1header"> 
                 <img class="logo" src="img/logo.png" alt="logo">
                 <ul>
-                    <li>header link1</li>
-                    <li>header link2</li>
-                    <li>header link3</li>
+                    <li><a href="www.protonmail.com">Protonmail</a></li>
+                    <li><a href="www.firefox.com">Firefox</a></li>
+                    <li><a href="www.bitwarden.com">Bitwarden</a></li>
                 </ul>
             </div>
     
             <div class="box1content">
-    
+                <div class="leftbox">
+                    Whoah there!
+                </div>
+                <div class="rightbox">
+                    <img src="img/secure.png" alt="shield icon">
+                </div>
             </div>
         </div>
 
