--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     
             <div class="box1content">
                 <div class="leftbox">
-                    Whoah there!
+                    <span class="leftboxh1">This website is awesome</span>
+                    <span class="leftboxh2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</span>
+                    <button class="leftboxbutton">Sign up</button>
                 </div>
+
                 <div class="rightbox">
                     <img src="img/secure.png" alt="shield icon">
                 </div>
