--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="box1header"> 
                 <img class="logo" src="img/logo.png" alt="logo">
                 <ul>
-                    <li><a href="www.protonmail.com">Protonmail</a></li>
-                    <li><a href="www.firefox.com">Firefox</a></li>
-                    <li><a href="www.bitwarden.com">Bitwarden</a></li>
+                    <li><a href="https://protonmail.com">Protonmail</a></li>
+                    <li><a href="https://firefox.com">Firefox</a></li>
+                    <li><a href="https://bitwarden.com">Bitwarden</a></li>
                 </ul>
             </div>
     
@@ -51,7 +51,7 @@
 
     <div class="box4">
         <div class="bluebar">
-            <span class="headline">Call to action! It's time!</span>
+            <span class="headline">Call to action! It's time!</span><br>
             <span class="moreinfo">Sign up for our product by clicking that button right over there!</span>
             <button class="signupbutton">
                 Sign up
