Refactoring and implemeting box2 html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/mainpage.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     
     <title>Landing Page Project</title>
 </head>
@@ -24,9 +26,9 @@
     
             <div class="box1content">
                 <div class="leftbox">
-                    <span class="leftboxh1">This website is awesome</span>
-                    <span class="leftboxh2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</span>
-                    <button class="leftboxbutton">Sign up</button>
+                    <span class="leftboxh1">Your security matters.</span>
+                    <span class="leftboxh2">On this landing page, your security & your privacy are our top priority. Look around, everything is about security.</span>
+                    <button class="leftboxbutton" type="button" >Sign up!</button>
                 </div>
 
                 <div class="rightbox">
@@ -38,9 +40,12 @@
     </div>
 
     <div class="box2">
-        <span class="title">Some random information</span>
+        <span class="title">Look at all that privacy!</span>
         <ul class="infoboxes">
-            <li><img src="" alt=""></li>
+            <li><img src="img/1.png" alt=""><span class="infoboxtext">This is a privacy mask.</span></li>
+            <li><img src="img/2.png" alt=""><span class="infoboxtext">This is a blue lock.</span></li>
+            <li><img src="img/3.png" alt=""><span class="infoboxtext">This is a red lock.</span></li>
+            <li><img src="img/4.png" alt=""><span class="infoboxtext">This is a ligh blue lock.</span></li>
         </ul>
     </div>
 
@@ -60,7 +65,7 @@
     </div>
 
     <div class="box5">
-        Copyright © The Odin Project 2022
+        Copyright © Julien Pontbriand 2022
     </div>
 
 
