--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     </div>
 
     <div class="box3">
-        <span class="box3quote">This is an inspiring quotem or a testimonial</span>
-        <span class="box3reference">-Thor</span>
+        <span class="box3quote">If you have nothing to hide, should you show everything you got? Of course not!<br>
+            People use shades and curtains for other reasons than for being criminals...
+        </span>
+        <span class="box3reference">-Some privacy idealist</span>
     </div>
 
     <div class="box4">
